--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -76,6 +76,7 @@
   "-5013": "部門不存在",
   "-5014": "部門不一致",
   "-5015": "新增人員失敗",
+  "-5016": "更新人員失敗",
 
   "-6801": "PDF服務連線失敗",
 
@@ -107,6 +108,10 @@
 
   "-9100": "解析Json失敗",
   "-9101": "解析檔案失敗",
+  "-9103": "格式錯誤:非有效情資格式",
+  "-9104": "格式錯誤:非有效HMD封裝格式",
+  "-9105": "HMD封裝版本低於當前版本",
+  "-9106": "情資匯入錯誤",
 
   "-10222": "設備代號已存在",
   "-10322": "機關OID已存在",
