--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -24,6 +24,7 @@
   "txt-all": "全部",
   "txt-view": "瀏覽",
   "txt-close": "關閉",
+  "txt-closeRefresh": "關閉並重新整理",
   "txt-show": "顯示",
   "txt-tips": "提示",
   "txt-layout-setting": "版面設定",
