Add terminate HMD button for HMD EDR tab.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -839,6 +839,7 @@
     "txt-logoffAllUsers": "Log Off",
     "txt-netcut": "Disconnected",
     "txt-netcutResume": "Resume",
+    "txt-terminateHmd": "Terminate",
     "txt-confirmTo": "Confirm to ",
     "txt-checkHmdSettings": "Please check HMD settings",
     "txt-notYetAssessed": "Not assessed",
