--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -839,6 +839,7 @@
     "txt-logoffAllUsers": "登出",
     "txt-netcut": "斷網",
     "txt-netcutResume": "恢復",
+    "txt-terminateHmd": "結束",
     "txt-confirmTo": "確認要",
     "txt-checkHmdSettings": "請檢查HMD設定",
     "txt-notYetAssessed": "未評估",
