Add PCAP download check before display to the user.

--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -170,6 +170,7 @@
   "txt-socModule": "SOC模組",
   "txt-host": "主機",
   "txt-group": "群組",
+  "txt-priority": "優先",
   "txt-settings": "設定",
   "txt-setting-eng": "Settings",
   "txt-item": "項目",
