--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -170,6 +170,7 @@
   "txt-socModule": "SOC Module",
   "txt-host": "Host",
   "txt-group": "Group",
+  "txt-priority": "Priority",
   "txt-settings": "Settings",
   "txt-setting-eng": "Settings",
   "txt-item": "Item",
