Add template menu for adding new SOAR rule.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -565,6 +565,10 @@
     "txt-disableRule": "Confirm to disable rule",
     "txt-addRule": "Add Rule",
     "txt-deleteRule": "Delete Rule",
+    "txt-new": "New",
+    "txt-template1": "Template 1",
+    "txt-template2": "Template 2",
+    "txt-template3": "Template 3",
     "txt-adapter": "Adapter",
     "txt-node": "Node",
     "txt-action": "Action",
