--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -565,10 +565,10 @@
     "txt-disableRule": "Confirm to disable rule",
     "txt-addRule": "Add Rule",
     "txt-deleteRule": "Delete Rule",
-    "txt-new": "New",
-    "txt-template1": "Template 1",
-    "txt-template2": "Template 2",
-    "txt-template3": "Template 3",
+    "txt-new": "New rule",
+    "txt-internalInventory": "HMD malware detection",
+    "txt-windowsLoginFail": "Windows login fail",
+    "txt-fortigateLog": " Add ip blacklist",
     "txt-adapter": "Adapter",
     "txt-node": "Node",
     "txt-action": "Action",
