--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -565,10 +565,10 @@
     "txt-disableRule": "請確認是否關閉此規則",
     "txt-addRule": "新增規則",
     "txt-deleteRule": "刪除規則",
-    "txt-new": "空白",
-    "txt-template1": "範例1",
-    "txt-template2": "範例2",
-    "txt-template3": "範例3",
+    "txt-new": "新規則",
+    "txt-internalInventory": "HMD惡意程式偵測",
+    "txt-windowsLoginFail": "登入事件失敗",
+    "txt-fortigateLog": " IP新增黑名單",
     "txt-adapter": "事件來源",
     "txt-node": "節點",
     "txt-action": "執行",
