Add one more step for SCP SOC incident device.

--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -302,6 +302,7 @@
 	},
 	"txt-device-comment": "Device Comment",
 	"txt-unit-select": "Device Unit Management",
+	"txt-defense-range": "Device Defense Range",
 	"required": {
 		"oid": "Unit OID must be required",
 		"deviceId": "Device must be required",
