Complete auto complete functionality for SMS notifications.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -693,9 +693,13 @@
     },
     "sms": {
       "txt-smsNotification": "SMS Notifications",
+      "txt-addNewService": "Add New Service",
       "txt-textMsg": "Text Message",
       "txt-recipients": "Recipient phone number",
-      "txt-SMS-mitake": "三竹簡訊"
+      "txt-pointCheckUrl": "Point Check URL",
+      "txt-multipleSendUrl": "Multiple Send URL",
+      "txt-SMS-mitake": "三竹簡訊",
+      "txt-SMS-CHT": "CHT"
     }   
   },
 
