--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -303,6 +303,7 @@
 	"txt-device-comment": "Device Comment",
 	"txt-unit-select": "Device Unit Management",
 	"txt-defense-range": "Device Defense Range",
+	"txt-is-slave": "Device is slave",
 	"required": {
 		"oid": "Unit OID must be required",
 		"deviceId": "Device must be required",
