--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -308,6 +308,7 @@
 	"txt-device-comment": "設備備註",
 	"txt-unit-select": "設備單位管理",
 	"txt-defense-range": "防禦範圍設定",
+	"txt-is-slave": "已是子設備",
 	"required": {
 		"oid": "機關單位OID為必填欄位",
 		"deviceId": "設備代號為必填欄位",
