--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -112,6 +112,7 @@
   "-9104": "格式錯誤:非有效HMD封裝格式",
   "-9105": "HMD封裝版本低於當前版本",
   "-9106": "情資匯入錯誤",
+  "-9107": "SMS連線失敗",
 
   "-10222": "設備代號已存在",
   "-10322": "機關OID已存在",
