--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -112,7 +112,8 @@
   "-9104": "格式錯誤:非有效HMD封裝格式",
   "-9105": "HMD封裝版本低於當前版本",
   "-9106": "情資匯入錯誤",
-  "-9107": "SMS連線失敗",
+  "-9107": "SMS測試失敗",
+  "-9108": "SMS餘額不足",
 
   "-10222": "設備代號已存在",
   "-10322": "機關OID已存在",
