Minor SMS updates.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -632,7 +632,7 @@
     "txt-title": "Title",
     "txt-content": "Content",
     "txt-testConnections": "Test Connections",
-    "txt-successConnections": "Test connections successful",
+    "txt-successConnections": "Test connections success",
     "txt-upload": "Upload Logs",
     "txt-upload-msg": "Please enter or upload event Logs.",
     "txt-Settings": "Event Testing",
@@ -695,7 +695,8 @@
       "txt-smsNotification": "SMS Notifications",
       "txt-testSMSconnections": "Test Connections",
       "txt-testSMSsend": "Test Sending Message",
-      "txt-connectionsSuccess": "Test connections success, remaining point",
+      "txt-connectionsSuccess": "Connections test successfully, remaining point",
+      "txt-sendSuccess": "Message sent successfully",
       "txt-addNewService": "Add New Service",
       "txt-textMsg": "Text Message",
       "txt-recipients": "Recipient phone number",
