--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -259,7 +259,8 @@
 		"6": "修改事件單",
 		"7": "轉分析人員",
 		"8": "撤銷事件單",
-		"9": "簽核事件單"
+		"9": "簽核事件單",
+		"10": "結案事件單"
 	},
 	"protectType": {
 		"0": "防毒軟體",
