--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -206,7 +206,7 @@
 		"txt-exists": "OID 已存在",
 		"txt-defaultDelete": "預設機關無法刪除",
 		"txt-existDevice": "機關尚有使用中設備，故無法刪除",
-		"txt-existChildren": "機關架構尚有子機關/部門，故無法刪除"
+		"txt-existChildren": "機關存在使用中設備，故無法刪除"
 	},
 	"device": {
 		"txt-edgeDevice": "可收錄之設備",
