Start implementing the Vans Patch functionality for Host page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -804,6 +804,13 @@
     "txt-hmdSetupFile": "HMD setup file",
     "txt-uplaodSuccess": "HMD setup file has been uploaded successfully",
     "txt-triggerAll": "Trigger All (HMD)",
+    "txt-vansPatch": "Vans Patch",
+    "txt-vansType": "Vans Type",
+    "txt-vansInstall": "Install Vans",
+    "txt-vansUninstall": "Uninstall Vans",
+    "txt-scriptFile": "Script File",
+    "txt-executableFile": "Executable File",
+    "txt-readyPatch": "Ready to Patch",
     "txt-yaraRules": "Yara Rules",
     "txt-gcbVersion": "GCB Version",
     "txt-eventsLogCount": "Events Log Count",
