--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -804,6 +804,13 @@
     "txt-hmdSetupFile": "HMD安裝檔",
     "txt-uplaodSuccess": "HMD安裝檔上傳成功",
     "txt-triggerAll": "全部檢測(HMD)",
+    "txt-vansPatch": "指令派送",
+    "txt-vansType": "指令類型",
+    "txt-vansInstall": "安裝指令",
+    "txt-vansUninstall": "移除指令",
+    "txt-scriptFile": "執行腳本",
+    "txt-executableFile": "執行程式",
+    "txt-readyPatch": "開始派送",
     "txt-yaraRules": "Yara Rules",
     "txt-gcbVersion": "GCB版本",
     "txt-eventsLogCount": "事件日誌數量",
