--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -40,6 +40,7 @@
   "txt-packets": "Packets",
   "txt-databytes": "Databytes",
   "txt-download": "Download",
+  "txt-downloadAll": "Download All",
   "txt-alert": "Alert",
   "txt-rule": "Rule",
   "txt-update": "Update",
