--- a/locales/en/errors.json
+++ b/locales/en/errors.json
@@ -115,6 +115,8 @@
   "-9107": "SMS testing failure",
   "-9108": "SMS insufficient balance failure",
 
+  "-9110": "FR-MOTP connect test failure",
+
   "-10222": "Device ID is already exist",
   "-10322": "Unit OID is already exist",
 
