--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -269,6 +269,7 @@
   "txt-memoMaxLength": "上限250字",
   "txt-updateTime": "更新時間",
   "txt-timeRangeError": "請檢查時間區間",
+  "txt-verificationCode": "驗證碼",
 
   "txt-listText": "列表",
   "txt-uploadPhoto": "上傳照片",
@@ -442,7 +443,9 @@
     "txt-deviceName": "主機名稱",
     "txt-deviceIP": "主機IP",
     "txt-mark": "標記",
-    "txt-parentDept": "直屬設備"
+    "txt-parentDept": "直屬設備",
+    "txt-frMotpMsg": "請輸入FR-MOTP所示驗證碼",
+    "txt-patchSuccess": "派送成功"
   },
 
   "alert": {
