Fix FR-MOTP patch error.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -812,7 +812,7 @@
     "txt-hmdSetupFile": "HMD setup file",
     "txt-uplaodSuccess": "HMD setup file has been uploaded successfully",
     "txt-triggerAll": "Trigger All (HMD)",
-    "txt-vansPatch": "Vans Patch",
+    "txt-vansPatch": "VANS Patch",
     "txt-vansType": "Vans Type",
     "txt-vansInstall": "Install Vans",
     "txt-vansUninstall": "Uninstall Vans",
