Add three more required fields for Vans Patch dialog.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -818,6 +818,9 @@
     "txt-vansUninstall": "Uninstall Vans",
     "txt-scriptFile": "Script File",
     "txt-executableFile": "Executable File",
+    "txt-patchProduct": "Patch Name",
+    "txt-patchVendor": "Patch Vendor",
+    "txt-patchVersion": "Patch Version",
     "txt-readyPatch": "Ready to Patch",
     "txt-yaraRules": "Yara Rules",
     "txt-gcbVersion": "GCB Version",
