--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -818,6 +818,9 @@
     "txt-vansUninstall": "移除指令",
     "txt-scriptFile": "執行腳本",
     "txt-executableFile": "執行程式",
+    "txt-patchProduct": "軟體登錄名稱",
+    "txt-patchVendor": "軟體登錄廠商",
+    "txt-patchVersion": "軟體登錄版本",
     "txt-readyPatch": "開始派送",
     "txt-yaraRules": "Yara Rules",
     "txt-gcbVersion": "GCB版本",
