Begin adding owner selection for department and account update.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -1055,6 +1055,13 @@
     "txt-removeDevice": "$t(txt-remove) this device from seat"
   },
 
+  "vansOwner": {
+    "ip": "IP",
+    "domainAccount": "Domain Account",
+    "unitCode": "Unit Code",
+    "unitCodeRegex": "Unit Code Regex"
+  },
+
   "attacksFields" : {
     "timestamp": "Date",
     "sensor": "Sensor",
