Add email field in Topology Owner page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -1119,7 +1119,8 @@
     "department": "Department",
     "title": "Title",
     "departmentName": "Department",
-    "titleName": "Title"
+    "titleName": "Title",
+    "email": "Email"
   },
   "ipFields": {
     "timestamp": "Date",
