--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -813,6 +813,7 @@
     "txt-uplaodSuccess": "HMD安裝檔上傳成功",
     "txt-triggerAll": "全部檢測(HMD)",
     "txt-vansPatch": "VANS Patch",
+    "txt-vansPatchRecord": "VANS Patch紀錄",
     "txt-vansType": "指令類型",
     "txt-vansInstall": "安裝指令",
     "txt-vansUninstall": "移除指令",
@@ -880,6 +881,16 @@
     "txt-confirmTo": "確認要",
     "txt-checkHmdSettings": "請檢查HMD設定",
     "txt-notYetAssessed": "未評估",
+    "txt-patch-install": "安裝指令",
+    "txt-patch-update": "修改指令",
+    "txt-patch-delete": "刪除指令",
+    "txt-taskRunning": "派送中",
+    "txt-taskComplete": "已派送",
+    "txt-taskNotSupport": "未支援",
+    "txt-executeFailure": "派送失敗",
+    "txt-executeRunning": "等待執行",
+    "txt-executeComplete": "執行成功",
+    "txt-taskFailure": "執行失敗",
     "scan-list": {
       "txt-yara": "Yara Scan",
       "txt-scanFile": "Malware",
@@ -889,7 +900,8 @@
       "txt-fileIntegrity": "File Integrity",
       "txt-procMonitor": "Process Monitor",
       "txt-ftpUpload": "FTP上傳",
-      "txt-_Vans": "VANS"
+      "txt-_Vans": "VANS",
+      "txt-_ExecutePatch": "VANS Patch紀錄"
     },
     "ir-type": {
       "txt-quick": "快速採證",
