--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -667,5 +667,18 @@
     "action": "執行 ",
     "status": "狀態",
     "isEnable": "啟用"
+  },
+  "vansPatchFields": {
+    "actionModel": "指令類型",
+    "scriptFileName": "執行腳本",
+    "executableFileName": "執行程式",
+    "memo": "備忘錄",
+    "patchProduct": "軟體登錄名稱",
+    "patchVendor": "軟體登錄廠商",
+    "patchVersion": "軟體登錄版本",
+    "taskCreateDttm": "派送時間",
+    "taskResponseDttm": "結束時間",
+    "taskStatus": "派送狀態",
+    "executeStatus": "執行結果"
   }
 }
