Complete the Vans Patch for host analysis dialog.

--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -670,6 +670,8 @@
     "isEnable": "Enable"
   },
   "vansPatchFields": {
+    "description": "Description",
+    "software": "Software Record",
     "actionModel": "Action Model",
     "scriptFileName": "Script Filename",
     "executableFileName": "Executable Filename",
