Complete replacing free text with autocomplete for dept and title. Minor bug fix.

--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -55,7 +55,7 @@
   "txt-seatName": "座位名稱",
   "txt-service": "服務",
   "txt-number": "數字",
-  "txt-memo": "備忘錄",
+  "txt-memo": "註記",
   "txt-info": "資訊",
   "txt-name": "名稱",
   "txt-cancel": "取消",
@@ -756,7 +756,7 @@
     "txt-lastUpdateTime": "最近更新時間",
     "txt-anyTime": "不限時段",
     "txt-customTime": "自訂時段",
-    "txt-memo": "備忘錄",
+    "txt-memo": "註記",
     "txt-deleteThreats": "$t(txt-delete)情資",
     "txt-edgeUpdateSuccess": "Edge更新成功",
     "txt-edgeUpdateFail": "Edge更新失敗",
