Add pdf export functionality for Vans Patch page.

--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -674,7 +674,7 @@
     "actionModel": "指令類型",
     "scriptFileName": "執行腳本",
     "executableFileName": "執行程式",
-    "memo": "備忘錄",
+    "memo": "註記",
     "patchProduct": "軟體登錄名稱",
     "patchVendor": "軟體登錄廠商",
     "patchVersion": "軟體登錄版本",
