Complete adding NetProxy tree and info in Host page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -1168,6 +1168,8 @@
     "connSize": "Connections Size",
     "unauthType": "Unauthorize Type",
     "version": "Version",
+    "netproxyIp": "NetProxy IP",
+    "netproxyName": "NetProxy Name",
     "latestTime": "Last Scan",
     "theLastestTaskResponseDttm": "Last Scan"
   },
