--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -1168,6 +1168,8 @@
     "connSize": "Connections Size",
     "unauthType": "Unauthorize Type",
     "version": "版本",
+    "netproxyIp": "NetProxy IP",
+    "netproxyName": "NetProxy 名稱",
     "latestTime": "最後掃描時間",
     "theLastestTaskResponseDttm": "最後掃描時間"
   },
