Add view more device info for HMD system section.

--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -689,5 +689,34 @@
     "hostName": "Host Name",
     "system": "System",
     "isConnected": "Host Status"
+  },
+  "hmdDeviceFields": {
+    "firewallInfo": "Firewall Info",
+    "initProgramInfo": "Init Program Info",
+    "installs": "Installs",
+    "browserInfo": "Browser Info",
+    "trustedSite": "Trusted Site",
+    "cpu": "CPU",
+    "ram": "RAM",
+    "disks": "Disks",
+    "antiVirus": "AntiVirus",
+    "name": "Name",
+    "enabled": "Enabled",
+    "remoteAddresses": "Remote Adresses",
+    "remotePorts": "Remote Ports",
+    "ipProtocol": "IP Protocol",
+    "applicationName": "Application Name",
+    "localAddresses": "Local Addresses",
+    "localPorts": "Local Ports",
+    "interfaceType": "Interface Type",
+    "direction": "Direction",
+    "edgeTraversal": "Edge Traversal",
+    "profile": "Profile",
+    "command": "Command",
+    "location": "Location",
+    "displayName": "Display Name",
+    "displayVersion": "Display Version",
+    "publisher": "Publisher",
+    "installDate": "Install Date"
   }
 }
