--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -688,5 +688,34 @@
     "hostName": "主機名稱",
     "system": "作業系統",
     "isConnected": "主機狀態"
+  },
+  "hmdDeviceFields": {
+    "firewallInfo": "本機防火牆資訊",
+    "initProgramInfo": "開機啟動程式",
+    "installs": "用戶端軟體資訊",
+    "browserInfo": "各種瀏覽器版本",
+    "trustedSite": "信任網站清單",
+    "cpu": "CPU資訊",
+    "ram": "記憶體容量",
+    "disks": "硬碟剩餘空間",
+    "antiVirus": "防毒軟體資訊",
+    "name": "名稱",
+    "enabled": "啟用狀態",
+    "remoteAddresses": "遠端位置",
+    "remotePorts": "遠端通訊埠",
+    "ipProtocol": "通訊協定",
+    "applicationName": "應用程式名稱",
+    "localAddresses": "本機位址",
+    "localPorts": "本機通訊埠",
+    "interfaceType": "介面",
+    "direction": "描述",
+    "edgeTraversal": "邊緣周遊",
+    "profile": "設定檔",
+    "command": "指令",
+    "location": "位置",
+    "displayName": "軟體名稱",
+    "displayVersion": "軟體版本",
+    "publisher": "發行者",
+    "installDate": "安裝日期"
   }
 }
