Various bug fix and minor updates for Vans page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -893,6 +893,7 @@
     "txt-executeRunning": "Running",
     "txt-executeComplete": "Complete",
     "txt-executeFailure": "Failure",
+    "txt-executeNotSupport": "Not Support",
     "scan-list": {
       "txt-yara": "Yara Scan",
       "txt-scanFile": "Malware",
