--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -682,6 +682,9 @@
     "taskCreateDttm": "Create Datetime",
     "taskResponseDttm": "Response Datetime",
     "taskUpdateDttm": "Update Datetime",
+    "hbDttm": "Last Connected Datetime",
+    "receiveDttm": "Receive Datetime",
+    "receiveCompleteDttm": "Receive Complete Datetime",
     "taskStatus": "Task Status",
     "executeStatus": "Execute Result",
     "deviceCount": "Device Count",
@@ -700,6 +703,8 @@
     "ram": "RAM",
     "disks": "Disks",
     "antiVirus": "AntiVirus",
+    "userName": "User Name",
+    "groups": "Groups",
     "name": "Name",
     "enabled": "Enabled",
     "remoteAddresses": "Remote Adresses",
