--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -681,6 +681,9 @@
     "taskCreateDttm": "派送時間",
     "taskResponseDttm": "結束時間",
     "taskUpdateDttm": "更新時間",
+    "hbDttm": "最後上線時間",
+    "receiveDttm": "接收時間",
+    "receiveCompleteDttm": "完成接收時間",
     "taskStatus": "派送狀態",
     "executeStatus": "執行結果",
     "deviceCount": "主機數量",
@@ -699,6 +702,8 @@
     "ram": "記憶體容量",
     "disks": "硬碟剩餘空間",
     "antiVirus": "防毒軟體資訊",
+    "userName": "使用者名稱",
+    "groups": "群組",
     "name": "名稱",
     "enabled": "啟用狀態",
     "remoteAddresses": "遠端位置",
