--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -116,6 +116,9 @@
   "-9108": "SMS餘額不足",
   "-9110": "FR-MOTP連線失敗",
   "-9111": "FR-MOTP驗證失敗",
+  "-9113": "缺少scriptFile或executableFile",
+  "-9114": "檔案名稱不可為空",
+  "-9115": "檔案大小不可為0",
 
   "-10222": "設備代號已存在",
   "-10322": "機關OID已存在",
