--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -894,6 +894,8 @@
     "txt-executeComplete": "Complete",
     "txt-executeFailure": "Failure",
     "txt-executeNotSupport": "Not Support",
+    "txt-netProxyFail": "File upload to NetProxy failed",
+    "txt-msgQueueFail": "Message queue failed",
     "scan-list": {
       "txt-yara": "Yara Scan",
       "txt-scanFile": "Malware",
