--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -894,6 +894,8 @@
     "txt-executeComplete": "執行成功",
     "txt-executeFailure": "執行失敗",
     "txt-executeNotSupport": "不支援",
+    "txt-netProxyFail": "檔案上傳NetProxy失敗",
+    "txt-msgQueueFail": "分流異常",
     "scan-list": {
       "txt-yara": "Yara Scan",
       "txt-scanFile": "Malware",
