--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -581,6 +581,7 @@
     "createDttm-start": "建立時間(起)",
     "createDttm-end": "建立時間(訖)",
     "sendTime": "發布時間",
+    "createdDttm": "建立時間",
     "impactAssessment": "影響等級",
     "description": "相關手法描述",
     "socType": "回報類型",
@@ -681,15 +682,15 @@
     "taskCreateDttm": "派送時間",
     "taskResponseDttm": "結束時間",
     "taskUpdateDttm": "更新時間",
-    "hbDttm": "最後上線時間",
     "receiveDttm": "接收時間",
     "receiveCompleteDttm": "完成接收時間",
+    "hbDttm": "最後上線時間",
     "taskStatus": "派送狀態",
     "executeStatus": "執行結果",
+    "taskStatusDescription": "派送狀態說明",
     "deviceCount": "主機數量",
     "ip": "IP",
     "hostName": "主機名稱",
-    "system": "作業系統",
     "isConnected": "主機狀態"
   },
   "hmdDeviceFields": {
