Various updates for Vans Patch pages.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -890,12 +890,18 @@
     "txt-taskComplete": "Complete",
     "txt-taskFailure": "Failure",
     "txt-taskNotSupport": "Not Support",
+    "txt-taskWaiting": "Waiting",
     "txt-executeRunning": "Running",
     "txt-executeComplete": "Complete",
     "txt-executeFailure": "Failure",
     "txt-executeNotSupport": "Not Support",
+    "txt-executeWaiting": "Waiting",
     "txt-netProxyFail": "File upload to NetProxy failed",
     "txt-msgQueueFail": "Message queue failed",
+    "txt-taskReceived": "Task Received",
+    "txt-downloadCompleted": "Download Complted",
+    "txt-executeCompleted": "Execution Complted",
+    "txt-executeAberrant": "Execution Aberrant",
     "txt-hmdImportExport": "HMD Import/Export",
     "scan-list": {
       "txt-yara": "Yara Scan",
