--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -890,12 +890,18 @@
     "txt-taskComplete": "已派送",
     "txt-taskFailure": "派送失敗",
     "txt-taskNotSupport": "不支援",
+    "txt-taskWaiting": "等待中",
     "txt-executeRunning": "等待執行",
     "txt-executeComplete": "執行成功",
     "txt-executeFailure": "執行失敗",
     "txt-executeNotSupport": "不支援",
+    "txt-executeWaiting": "等待中",
     "txt-netProxyFail": "檔案上傳NetProxy失敗",
     "txt-msgQueueFail": "分流異常",
+    "txt-taskReceived": "收到派送任務",
+    "txt-downloadCompleted": "下載完成",
+    "txt-executeCompleted": "執行完成",
+    "txt-executeAberrant": "執行結果異常",
     "txt-hmdImportExport": "HMD匯出/匯入",
     "scan-list": {
       "txt-yara": "Yara Scan",
