--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -694,6 +694,15 @@
     "isConnected": "主機狀態"
   },
   "hmdDeviceFields": {
+    "remarks": "備註",
+    "cpu": "中央處理器",
+    "ram": "記憶體",
+    "hostID": "主機ID",
+    "hostName": "主機名稱",
+    "system": "使用系統",
+    "deviceType": "裝置類型",
+    "userAccount": "使用者帳號",
+    "shareFolders": "分享資料夾",
     "firewallInfo": "本機防火牆資訊",
     "initProgramInfo": "開機啟動程式",
     "installs": "用戶端軟體資訊",
@@ -703,7 +712,7 @@
     "ram": "記憶體容量",
     "disks": "硬碟剩餘空間",
     "antiVirus": "防毒軟體資訊",
-    "userName": "使用者名稱",
+    "userName": "登入帳號",
     "groups": "群組",
     "name": "名稱",
     "enabled": "啟用狀態",
