Start working on Host filter updates.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -1158,6 +1158,7 @@
     "floorName": "Floor Name",
     "userAccount": "User Account",
     "userName": "User",
+    "groups": "Groups",
     "disks": "$t(txt-disks)",
     "shareFolders": "$t(txt-shareFolders)",
     "ownerId": "Owner ID",
