Complete adding more search fields for Host page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -1182,7 +1182,7 @@
     "netproxyIp": "NetProxy IP",
     "netproxyName": "NetProxy Name",
     "latestTime": "Last Scan",
-    "theLastestTaskResponseDttm": "Last Scan"
+    "theLatestTaskResponseDttm": "Latest Task Response Time"
   },
   "syslogFields": {
     "port": "Received Port",
